Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-96005

Qt Designer: Adhere to XDG specification by not writting to $HOME/.designer/

XMLWordPrintable

    • Linux/Wayland
    • e3b586465dc3cfc5bc64120ad8c4302e661dba35 (qt/qttools/dev)

      Qtcreator saves some files directly under $HOME:

      $HOME/.designer/templates/

      $HOME/.designer/gradients.xml

      Please follow suit the rest of Qt and move these files to appropriate locations. I think you already know about the "XDG Base Directory specification" .

      Since Qtcreator already saves its files (config/data..) under $XDG_CONFIG_HOME/QtProject/qtcreator/ , am wondering why not save the rest as well in this location.

       

        For Gerrit Dashboard: QTBUG-96005
        # Subject Branch Project Status CR V

            kleint Friedemann Kleint
            jirauser61492 user-5bdd9 (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes