Qt Designer: Use standard data directory starting from Qt 7

Introduce a convenience function to return the data directory
and refactor the code to use forward slashes and string literals.

Fixes: QTBUG-96005
Change-Id: I6b82ef027ee8b7890f40654a51bde1a562edd59e
Reviewed-by: Jarek Kobus <jaroslaw.kobus@qt.io>