src/designer/src/lib/shared/qdesigner_utils_p.h
@@ -61,6 +61,8 @@ class DesignerIconCache;
 class FormWindowBase;
 
 
+QDESIGNER_SHARED_EXPORT QString dataDirectory();
+
 QDESIGNER_SHARED_EXPORT void designerWarning(const QString &message);
 
 QDESIGNER_SHARED_EXPORT void reloadIconResources(DesignerIconCache *iconCache, QObject *object);
